--- a/src/components/SessionsList/index.module.css
+++ b/src/components/SessionsList/index.module.css
@@ -8,9 +8,10 @@
 }
 
 .p {
-  margin: 0 2rem 1.5rem;
-  max-width: 800px;
-  text-align: left;
+  margin: 0 auto 1.5rem;
+  max-width: 1200px;
+  text-align: center;
+  padding: 0 2rem;
 }
 
 .sessions {
@@ -19,6 +20,7 @@
   gap: 2rem;
   padding: 0 2rem;
   list-style: none;
+  align-items: stretch;
 }
 
 @media (width >= 768px) {
